# marble-bust-training-pipelines

./: .gitignore  Dockerfile  PIPELINE_STATUS.md  README.md  eval_pipeline_spec.md  pyproject.toml  training_pipelines_spec.md
backends/: __init__.py
backends/flux_ai_toolkit/: __init__.py  config_builder.py  runner.py  smoke_test.py  verify_local.py
backends/qwen_diffsynth/: __init__.py  config_builder.py  runner.py  smoke_test.py  verify_local.py
core/: __init__.py  config_schema.py  dataset_contract.py  env_contract.py  hardware.py  local_verify.py  model_matrix.py  output_layout.py  storage.py  trainer_versions.py  training_flow.py
data/: bootstrap_demo_dataset.py  prepare_arch_a.py  prepare_arch_b.py
docs/: RUNPOD_ENV_REBUILD.md
inference/: __init__.py  artifacts.py  engine.py  outputs.py  prompts.py  registry.py
runpod/: launch.sh  setup_pod.sh
scripts/: bootstrap_demo_dataset.py  bootstrap_trainers.py  compare_lora_checkpoints.py  export_weights.py  infer_batch.py  infer_image.py  prepare_training_config.py  sample_checkpoints.py  smoke_test.py  train.py  validate.py  verify_local.py
tests/: test_ai_toolkit_backend.py  test_bootstrap.py  test_bootstrap_demo_dataset.py  test_cli_flows.py  test_compare_lora_checkpoints.py  test_config_schema.py  test_contracts.py  test_diffsynth_backend.py  test_docs.py  test_inference_contract.py  test_inference_scripts.py  test_prepare_data.py  test_prepare_training_config.py  test_runpod_contract.py  test_sample_checkpoints.py  test_smoke_strategy.py  test_trainer_versions.py  test_verify_local.py
(+13 files in other folders)
